--- a/typescript-course/package.json
+++ b/typescript-course/package.json
@@ -4,20 +4,29 @@
   "description": "",
   "main": "server/server.ts",
   "scripts": {
-    "start": "./node_modules/.bin/ts-node ./server/server.ts",
-    "builded": "node ./build/server.js",
+    "start": "NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
+    "builded": "NODE_ENV=development node ./build/server/server.js",
+    "unit-test": "NODE_ENV=test mocha --opts build/tests/unit/config/mocha.opts ./build/tests/unit/unit.tests.js",
+    "integration-test": "NODE_ENV=test mocha --opts build/tests/integration/config/mocha.opts ./build/tests/integration/integration.tests.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.5",
+    "@types/supertest": "^2.0.5",
     "body-parser": "^1.18.3",
+    "chai": "^4.1.2",
     "express": "^4.16.3",
     "http": "0.0.0",
+    "mocha": "^5.2.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0",
+    "supertest": "^3.1.0",
+    "testdouble": "^3.8.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   },
