--- a/typescript-course/package.json
+++ b/typescript-course/package.json
@@ -20,6 +20,7 @@
     "chai": "^4.1.2",
     "express": "^4.16.3",
     "http": "0.0.0",
+    "http-status": "^1.2.0",
     "mocha": "^5.2.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
