--- a/typescript-course/package.json
+++ b/typescript-course/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
     "builded": "NODE_ENV=development node ./build/server/server.js",
+    "builded-test": "NODE_ENV=test node ./build/server/server.js",
     "unit-test": "NODE_ENV=test mocha --opts build/tests/unit/config/mocha.opts ./build/tests/unit/unit.tests.js",
     "integration-test": "NODE_ENV=test mocha --opts build/tests/integration/config/mocha.opts ./build/tests/integration/integration.tests.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,16 +14,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bluebird": "^3.5.5",
     "@types/chai": "^4.1.4",
+    "@types/jwt-simple": "^0.5.33",
+    "@types/lodash": "^4.14.116",
     "@types/mocha": "^5.2.5",
+    "@types/passport": "^0.4.6",
+    "@types/passport-jwt": "^3.0.1",
     "@types/supertest": "^2.0.5",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "express": "^4.16.3",
     "http": "0.0.0",
     "http-status": "^1.2.0",
+    "jwt-simple": "^0.5.1",
+    "lodash": "^4.17.10",
     "mocha": "^5.2.0",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.4.3",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0",
