--- a/typescript-course/package.json
+++ b/typescript-course/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.ts",
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
-    "builded": "NODE_ENV=development node ./build/server/server.js",
+    "builded": "NODE_ENV=production node ./build/server/server.js",
     "builded-test": "NODE_ENV=test node ./build/server/server.js",
     "unit-test": "NODE_ENV=test mocha --opts build/tests/unit/config/mocha.opts ./build/tests/unit/unit.tests.js",
     "integration-test": "NODE_ENV=test mocha --opts build/tests/integration/config/mocha.opts ./build/tests/integration/integration.tests.js",
