--- a/typescript-course/package.json
+++ b/typescript-course/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "server/server.ts",
   "scripts": {
-    "start": "NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
-    "builded": "NODE_ENV=production node ./build/server/server.js",
-    "builded-test": "NODE_ENV=test node ./build/server/server.js",
-    "unit-test": "NODE_ENV=test mocha --opts build/tests/unit/config/mocha.opts ./build/tests/unit/unit.tests.js",
-    "integration-test": "NODE_ENV=test mocha --opts build/tests/integration/config/mocha.opts ./build/tests/integration/integration.tests.js",
+    "start": "PORT=500 NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
+    "builded": "PORT=500 NODE_ENV=production node ./dist/server/server.js",
+    "builded-test": "PORT=500 NODE_ENV=test node ./dist/server/server.js",
+    "unit-test": "NODE_ENV=test mocha --opts dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.tests.js",
+    "integration-test": "NODE_ENV=test mocha --opts dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.tests.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,10 +22,14 @@
     "@types/passport": "^0.4.6",
     "@types/passport-jwt": "^3.0.1",
     "@types/supertest": "^2.0.5",
+    "bcrypt": "^3.0.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "express": "^4.16.3",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-typescript": "^5.0.0-alpha.3",
     "http": "0.0.0",
     "http-status": "^1.2.0",
     "jwt-simple": "^0.5.1",
