--- a/typescript-course/tsconfig.json
+++ b/typescript-course/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "outDir": "build",
+        "outDir": "dist",
         "typeRoots": [
             "../node_modules/@types"
         ],
