--- a/typescript-course/.vscode/tasks.json
+++ b/typescript-course/.vscode/tasks.json
@@ -7,6 +7,11 @@
             "type": "npm",
             "script": "builded-test",
             "problemMatcher": []
+        },
+        {
+            "type": "npm",
+            "script": "builded",
+            "problemMatcher": []
         }
     ]
 }
